Update modules function done + start sorting newest module function
update modules function is done and can be used. The swagger document has been updated as well for the created function. Moreover, sorting newest module function has been started.
